# LoFi-Turtle

./: Cargo.toml  LAYOUT_GUIDE.md  MACOS_LIMITATIONS.md  README.md  compact_layout.toml  dashboard_layout.toml  default_layout.toml  dracula_layout.toml  keymap.toml  layout.toml  layout_widescreen.toml  lofiturtle_settings.json  minimal_layout.toml  music_library.db  retro_layout.toml  test_keymap.toml  test_layout.toml  visual_layout.toml
.github/workflows/: rust.yml
examples/: minimal_demo.rs
src/: art.rs  cli.rs  config.rs  error.rs  lib.rs  main.rs  new.sh
src/application/: mod.rs
src/application/dto/: mod.rs
src/application/services/: mod.rs  music_library_service.rs
src/application/use_cases/: mod.rs  playlist_management.rs  song_management.rs
src/audio/: gapless_player.rs  mod.rs  player.rs
src/commands/: list.rs  mod.rs  play.rs  playlist.rs  scan.rs  search.rs
src/config/: app_config.rs  defaults.rs  layout_config.rs  mod.rs
src/domain/: mod.rs
src/domain/entities/: mod.rs  playlist.rs  song.rs
src/domain/repositories/: mod.rs
src/domain/value_objects/: mod.rs
src/infrastructure/: mod.rs
src/infrastructure/factories/: mod.rs  repository_factory.rs
src/infrastructure/repositories/: mod.rs  sqlite_playlist_repository.rs  sqlite_playlist_song_repository.rs  sqlite_song_repository.rs
src/models/: mod.rs  playback.rs  playlist.rs  song.rs
src/player/: mod.rs  playback_engine.rs
src/services/: mod.rs  tui_service.rs
src/shared/: mod.rs
src/shared/errors/: mod.rs
src/ui/: app.rs  layout.rs  mod.rs  theme.rs  widgets.rs
