[package]
name = "lofiturtle"
version = "0.1.0"
edition = "2024"

[dependencies]
# CLI and argument parsing
clap = { version = "4.5.45", features = ["derive"] }

# TUI framework
ratatui = "0.29.0"
tui-textarea = "0.7.0"

# Audio processing
rodio = "0.21.1"
lofty = "0.22.4"

# Database
rusqlite = { version = "0.37.0", features = ["bundled"] }

# Error handling and serialization
thiserror = "2.0.16"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.132"

# Async runtime and utilities
tokio = { version = "1.47.1", features = ["full"] }
async-trait = "0.1.77"
md5 = "0.8.0"
uuid = { version = "1.18.0", features = ["v4"] }


# Image processing for album art
image = "0.25.6"  # For album art processing

# Additional utilities
chrono = { version = "0.4.41", features = ["serde"] }
rand = "0.9.2"  # For shuffle randomization


# Logging
log = "0.4.27"
env_logger = "0.11.8"
